# SpotiStream

./: .cache  .gitignore  Eng Song.csv  README.md  Spotify-versions.py  Urdu Songs.csv  credential.py  main.py  pyproject.toml  requirements.txt  setup.py  spotify_credentials.txt
spoti_fly/: MANIFEST.in  converter.py  downloader.py  main.py  setup.py
spoti_fly/spoti_fly/: __init__.py  converter.py  install_dependencies.py
spoti_stream/: __main__.py  spotify_utils.py
spoti_stream.egg-info/: PKG-INFO
